corrección links tesis

--- a/content/publication/academic-presentations.bib
+++ b/content/publication/academic-presentations.bib
@@ -374,6 +374,39 @@ International Social Justice Project - Working Paper N°125},
 [Github Repo](https://github.com/ocscoes/presentaciones)}
 }
 
+@misc{castillo_measuring_2024,
+  type = {Presentation at the workshop International Perspectives on the Measurement of Social Cohesion: Insights from Australia, Chile, and Germany},
+  title = {Measuring social cohesion in Chile  with longitudinal survey data},
+  author = {Castillo, Juan-Carlos},
+  year = {2024},
+  month = jul,
+  address = {Bremen},
+  url = {https://inequality-conference.de/},
+  abstract = {The workshop highlighted different perspectives on the measurement of social cohesion in three countries - Australia, Chile and Germany. After a welcome and introduction by Olaf Groh-Samberg, our guests Juan-Carlos Castillo (COES, Center for the Study of Conflict and Social Cohesion, Chile) and James O'Donnell (Scanlon Foundation's Mapping Social Cohesion study, Australia) reported on the respective theoretical approaches, methodologies and results of their research on social cohesion. Jean-Yves Gerlitz and Nils Teichler (RDC-RISC, Germany) reported on the work at the research data center, the survey of the central longitudinal study German Social Cohesion Panel (SCP), the study approach for measuring social cohesion, as well as selected results of the monitoring based on the first cohesion report. The inspiring presentations and different methodologies of cohesion research in Australia, Chile and Germany led to a lively discussion with the speakers and around 20 workshop participants about the challenges of analysing social cohesion, conflict and polarization in an international comparison. Among other things, the difficulties and potentials of standardized indices for measuring cohesion were discussed, as well as the question of how social conflicts between large societal groups can actually be integrated into measurement concepts of cohesion.},
+  annotation = {url\_pdf : "" \\
+url\_project: ""\\
+url\_slides: "https://ocscoes.github.io/presentaciones/FGZ-Bremen-2024.html"\\
+url\_video: ""\\
+url\_poster: ""\\
+\# links:\\
+- icon: github\\
+  icon\_pack: fab\\
+  name: Github\\
+  web: https://github.com/ocscoes/presentaciones\\
+\\
+---\\
+\\
+![](https://fgz-risc-data.de/f/e/source/workshop20240625.jpg)\\
+\\
+- [FGZ News report](https://fgz-risc-data.de/en/news/message/internationalisierung-erfolgreicher-workshop-des-fdz-fgz)\\
+\\
+\#\# Documento de presentación\\
+\\
+(F para pantalla completa)\\
+\\
+{$<$}iframe width="700"  height="450" src="https://ocscoes.github.io/presentaciones/FGZ-Bremen-2024.html" title="Xaringan presentation" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen{$><$}/iframe{$>$}}
+}
+
 @misc{castillo_meritocracia_2024,
   type = {Congreso Chileno de Sociología - PreAlas},
   title = {Meritocracia y justificación de desigualdad en la etapa escolar: Un experimento de encuesta.},
@@ -471,7 +504,7 @@ url\_poster: ""\\
   annotation = {---}
 }
 
-@misc{castillo_presentacion_2022,
+@misc{castillo_presentación_2022,
   type = {Presentación Seminario CEPAL-COES},
   title = {Presentación Cohesión social en Chile en tiempos de cambio: Indicadores, perfiles y factores asociados},
   author = {Castillo, Juan-Carlos},
@@ -479,7 +512,7 @@ url\_poster: ""\\
   month = mar,
   address = {Santiago  (Online)},
   url = {https://ocscoes.github.io/presentaciones/CEPAL2022cohesionELSOC.html},
-  abstract = {![](/images/cepal-coes-2022.png) El interés por el estudio de la cohesión social posee una larga trayectoria tanto académica como así también desde el estado y de organizaciones con interés público. La cohesión social aparece como una aspiración normativa de una sociedad mejor, vinculada a conceptos como lazos sociales de calidad, pertenencia, y confianza en los demás y en el estado. Se asume también que un estado de adecuada cohesión social es producto de condiciones estructurales y políticas que apunten a mayor igualdad, integración y oportunidades, por lo cual muchas veces se refiere a ella como un horizonte o una consecuencia de buenas políticas sociales. Sin duda este horizonte normativo reaparece con fuerza en tiempos caracterizados por crisis económica producto de la pandemia, polarización política, y la extrema concentración de ingreso y privilegios que caracteriza las sociedades actuales y donde el caso Chileno claramente no es una excepción. El renovado interés por la cohesión social nos lleva necesariamente a volver sobre su definición, sus alcances y su medición. Si bien existen muchas diferencias en las aproximaciones y definiciones en este tema, en los últimos años surge una convergencia hacia el carácter multidimensional de la cohesión social, que incorpora elementos como relaciones sociales de igualdad, sentido de pertenencia y orientación hacia el bien común. Partiendo desde una definición de cohesión social de la CEPAL (2021), este reporte de investigación presenta inicialmente una propuesta de indicadores de cohesión social basada en la Encuesta Longitudinal Social de Chile - ELSOC 2016-2020, producida por COES. El carácter longitudinal-panel de esta encuesta nos permite realizar posteriormente un análisis de los cambios ocurridos en nueve indicadores de cohesión social en Chile entre los años 2016 y 2020. Finalmente, se presenta una propuesta de tres perfiles de cohesión social en la sociedad chilena así como también su caracterización socioeconómica y regional.},
+  abstract = {El interés por el estudio de la cohesión social posee una larga trayectoria tanto académica como así también desde el estado y de organizaciones con interés público. La cohesión social aparece como una aspiración normativa de una sociedad mejor, vinculada a conceptos como lazos sociales de calidad, pertenencia, y confianza en los demás y en el estado. Se asume también que un estado de adecuada cohesión social es producto de condiciones estructurales y políticas que apunten a mayor igualdad, integración y oportunidades, por lo cual muchas veces se refiere a ella como un horizonte o una consecuencia de buenas políticas sociales. Sin duda este horizonte normativo reaparece con fuerza en tiempos caracterizados por crisis económica producto de la pandemia, polarización política, y la extrema concentración de ingreso y privilegios que caracteriza las sociedades actuales y donde el caso Chileno claramente no es una excepción. El renovado interés por la cohesión social nos lleva necesariamente a volver sobre su definición, sus alcances y su medición. Si bien existen muchas diferencias en las aproximaciones y definiciones en este tema, en los últimos años surge una convergencia hacia el carácter multidimensional de la cohesión social, que incorpora elementos como relaciones sociales de igualdad, sentido de pertenencia y orientación hacia el bien común. Partiendo desde una definición de cohesión social de la CEPAL (2021), este reporte de investigación presenta inicialmente una propuesta de indicadores de cohesión social basada en la Encuesta Longitudinal Social de Chile - ELSOC 2016-2020, producida por COES. El carácter longitudinal-panel de esta encuesta nos permite realizar posteriormente un análisis de los cambios ocurridos en nueve indicadores de cohesión social en Chile entre los años 2016 y 2020. Finalmente, se presenta una propuesta de tres perfiles de cohesión social en la sociedad chilena así como también su caracterización socioeconómica y regional.},
   annotation = {---\\
 \#\# Video de la presentación\\
 \\
