--- a/content/tesis/tesis.bib
+++ b/content/tesis/tesis.bib
@@ -17,7 +17,10 @@ url\_poster: ""links:\\
   icon\_pack: fa\\
   name: Prof. Guía\\
   web: /tag/guia-o-cotutor/\\
-\\
+- icon: file\\
+  icon\_pack: fa\\
+  name: Documento\\
+  web:  https://jc-castillo.com/docs/acevedoversionfinal.pdf\\
 \\
 ---\\
 \\
@@ -42,11 +45,7 @@ las últimas elecciones presidenciales en Chile. Este instrumento se prefiere po
 por las temáticas especı́ficas que aborda, y porque cuenta con indicadores claves para medir\\
 el compromiso cı́vico de la manera propuesta. Además, cuenta con datos más actualizados\\
 en comparación con otras encuestas dirigidas a la juventud chilena, lo que permite visualizar\\
-los cambios ocurridos en el último tiempo (a partir de los años 2011-2012).\\
-\\
-\# Documento\\
-\\
-{$<$}iframe src="/docs/Tacevedoversionfinal.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+los cambios ocurridos en el último tiempo (a partir de los años 2011-2012).}
 }
 
 @phdthesis{acevedo_evaluacion_2014,
@@ -468,7 +467,7 @@ url\_poster: ""links:\\
 - icon: file\\
   icon\_pack: fa\\
   name: Documento\\
-  web: /tesis/2018\_desigualdad\_desarro/\#documento\\
+  web: https://jc-castillo.com/docs/Tesis\_InformeFinal\_FRANETOVIC\_CORREGIDO.pdf\\
 \\
 \\
 \\
@@ -497,11 +496,7 @@ autointerés sólo emerge al interior de la región en sociedades económicament
 ricas. A la luz de los resultados, se establecen comparaciones con los hallazgos de\\
 investigaciones previas en paı́ses desarrollados, discutiéndose la aplicación de teorı́as\\
 racionalistas en materia de justicia y solidaridad social al interior de las sociedades\\
-que conforman nuestra región.\\
-\\
-\# Documento\\
-\\
-{$<$}iframe src="/docs/Tesis\_InformeFinal\_FRANETOVIC\_CORREGIDO.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+que conforman nuestra región.}
 }
 
 @phdthesis{garcia_relevancia_2017,
@@ -960,13 +955,15 @@ url\_poster: ""links:\\
 - icon: file\\
   icon\_pack: fa\\
   name: Documento\\
-  web: /tesis/2018\_balance\_legistlativo/\#documento\\
+  web: https://jc-castillo.com/docs/Tesis\_SMontedónicoG.pdf\\
 \\
 \\
 \\
 ---\\
 \\
-\# ResumenTradicionalmente las tendencias y partidos de izquierda se han asociado a un rol más\\
+\# Resumen\\
+\\
+Tradicionalmente las tendencias y partidos de izquierda se han asociado a un rol más\\
 activo del Estado en temas de redistribución. Este trabajo pretende ahondar en este\\
 punto, analizando en qué medida la composición de los parlamentos en términos de\\
 izquierda-derecha (balance legislativo) se relaciona con mayores o menores preferen-\\
@@ -983,11 +980,7 @@ contexto polı́tico institucional son más complejas de lo que han demostrado e
 anteriores. Por todo lo anterior, se sugiere que para promover el apoyo a polı́ticas re-\\
 distributivas se debe desarrollar instituciones polı́ticas socialmente válidas y analizar\\
 los factores que están asociados a tendencia hacia la izquierda del aparato legislativo,\\
-dado que algún elemento de ello genera un desincentivo hacia la redistribución.\\
-\\
-\# Documento\\
-\\
-{$<$}iframe src="/docs/Tesis\_SMontedónicoG.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+dado que algún elemento de ello genera un desincentivo hacia la redistribución.}
 }
 
 @phdthesis{munoz_formacion_2017,
@@ -1114,7 +1107,7 @@ url\_poster: ""links:\\
 - icon: file\\
   icon\_pack: fa\\
   name: Documento\\
-  web: /tesis/2016\_legitimidad\_del\_sist/\#documento\\
+  web: https://jc-castillo.com/docs/FinalCorregidaAgosto2016.pdf\\
 \\
 \\
 \\
@@ -1127,11 +1120,7 @@ Los datos utilizados provienen del Estudio Nacional sobre el Conflicto y la Cohe
 \\
 El análisis se basa en datos empíricos recopilados mediante el Análisis de Clases Latentes, que permiten identificar perfiles de participación y explorar la diversificación del repertorio político en la ciudadanía chilena. Se destaca la importancia de considerar la educación y los ingresos como factores que pueden influir en las percepciones de deprivación relativa y, por ende, en la motivación para la acción política.\\
 \\
-Los resultados preliminares sugieren que las percepciones sobre la legitimidad del sistema económico juegan un papel significativo en el comportamiento político de los individuos, especialmente en un contexto de crisis de representatividad y distanciamiento entre la política partidista y la ciudadanía común. Se plantea la necesidad de profundizar en la comprensión de estos mecanismos para abordar los desafíos actuales en materia de participación política y legitimidad institucional en Chile.\\
-\\
-\# Documento\\
-\\
-{$<$}iframe src="/docs/FinalCorregidaAgosto2016.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+Los resultados preliminares sugieren que las percepciones sobre la legitimidad del sistema económico juegan un papel significativo en el comportamiento político de los individuos, especialmente en un contexto de crisis de representatividad y distanciamiento entre la política partidista y la ciudadanía común. Se plantea la necesidad de profundizar en la comprensión de estos mecanismos para abordar los desafíos actuales en materia de participación política y legitimidad institucional en Chile.}
 }
 
 @phdthesis{plaza_intereses_2019,
@@ -1372,8 +1361,7 @@ url\_poster: ""links:\\
 - icon: file\\
   icon\_pack: fa\\
   name: Documento\\
-  web: /tesis/2015\_que\_puede\_hacer\_la\_/\#documento\\
-\\
+  web: https://jc-castillo.com/docs/SantanderTesisVersionFinal.pdf\\
 \\
 \\
 ---\\
@@ -1421,10 +1409,7 @@ formativo de la escuela, que excede un aprendizaje meramente cognitivo y que se\
 proyecta y actualiza en los espacios institucionales de deliberación y participación\\
 política. Finalmente, el autor entrega valiosa evidencia descriptiva sobre el\\
 comportamiento del liderazgo distribuido y del compromiso organizacional en las\\
-escuelas chilenas.\\
-\# Documento\\
-\\
-{$<$}iframe src="/docs/SantanderTesisVersionFinal.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+escuelas chilenas.}
 }
 
 @phdthesis{tapia_bienestar_2022,
@@ -1487,8 +1472,7 @@ url\_poster: ""links:\\
 - icon: file\\
   icon\_pack: fa\\
   name: Documento\\
-  web: /tesis/2015\_aspectos\_subjetivos\_/\#documento\\
-\\
+  web: https://jc-castillo.com/docs/TesisAlexTorresMeritocracia.pdf\\
 \\
 \\
 ---\\
@@ -1521,10 +1505,7 @@ estatus subjetivo y por el nivel educacional (de forma inversa), mientras que la
 no se asocia a los elementos considerados en el modelo. Respecto de la desigualdad, se\\
 observa que la meritocracia funcionaria como una estrategia legitimadora, por un lado,\\
 al asociarse a la percepción de menores niveles de desigualdad (percepción) y, por otro,\\
-a desear mayores brechas salariales entre ocupaciones de alto y bajo estatus (creencia).\\
-\# Documento\\
-\\
-{$<$}iframe src=/docs/TesisAlexTorresMeritocracia.pdf  style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+a desear mayores brechas salariales entre ocupaciones de alto y bajo estatus (creencia).}
 }
 
 @phdthesis{urrutia_determinantes_2022,
@@ -1690,7 +1671,7 @@ url\_poster: ""links:\\
 - icon: file\\
   icon\_pack: fa\\
   name: Documento\\
-  web: /tesis/2016\_medicion\_en\_ciudadan/\#documento\\
+  web: https://jc-castillo.com/docs/trabajo de grado II\_viertel\_corregido.pdf\\
 \\
 \\
 \\
@@ -1711,11 +1692,7 @@ implementan la asignatura de educación cívica o no. Los resultados indican que
 comparaciones entre países no pueden realizarse sin asumir un importante nivel de\\
 sesgo, mientras que la evaluación de invarianza entre escuelas que implementan\\
 educacion civica o no, se logra en su nivel más estricto. Se discuten aspectos\\
-metodológicos de las posibles fuentes de sesgo.\\
-\\
-\# Documento\\
-\\
-{$<$}iframe src="/docs/trabajo de grado II\_viertel\_corregido.pdf" style="min-height:100vh;width:100\%" frameborder="0"{$><$}/iframe{$>$}}
+metodológicos de las posibles fuentes de sesgo.}
 }
 
 @phdthesis{villarroel_stability_2014,
