--- a/content/docencia/desarrollo-tesis/index.Rmd
+++ b/content/docencia/desarrollo-tesis/index.Rmd
@@ -78,6 +78,9 @@ Los horarios de reuniones grupales de miércoles en la tarde son por lo general 
 
 Además de estas actividades, luego de la entrega de cada informe se realizará una reunión de retroalimentación individual del trabajo.
 
+<iframe src="https://calendar.google.com/calendar/embed?src=c_b52380b872af208e4f98dfc1f82c7fffc7bbe57879364d0c2096c3f892bc4986%40group.calendar.google.com&ctz=America%2FSantiago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+
 
 # Links
 
